# web_module_11

./: .coverage  .example.env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1275597e6004_email_unique_false.py  16e4a0d26c13_avatar.py  20e1a9adf6b5_birthday_date.py  2d5b621018bc_email.py  82a76a8f94b3_add_user.py  a27786e92d32_add_role_of_user.py  b10ffacef151_init.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
htmlcov/: d_145eef247bfb46b6_schemas_py.html  d_53606e9522d39d55_auth_py.html  d_53606e9522d39d55_contacts_py.html  d_53606e9522d39d55_users_py.html  d_57fdb4e82e728119_contacts_py.html  d_57fdb4e82e728119_users_py.html  d_67f6f9a13eff1831_auth_py.html  d_67f6f9a13eff1831_cloud_image_py.html  d_67f6f9a13eff1831_email_py.html  d_67f6f9a13eff1831_roles_py.html  d_83bb46b0261c7dc5_config_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_main_py.html  d_a44f0ac069e85531_test_route_auth_py.html  d_a44f0ac069e85531_test_unit_repository_contacts_py.html  d_a44f0ac069e85531_test_unit_repository_users_py.html  d_f1aa34bc7b1afc18_db_py.html  d_f1aa34bc7b1afc18_models_py.html  index.html  main_py.html  status.json
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/seed/: contacts.py
src/services/: auth.py  cloud_image.py  email.py  roles.py
tests/: conftest.py  test.db  test_main.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
(+8 files in other folders)
